[gd_scene load_steps=7 format=3 uid="uid://dnfo71pbkxjva"]

[ext_resource type="Texture2D" uid="uid://3cq1y3fuoddl" path="res://Textures/Plant.png" id="1_ftkaf"]
[ext_resource type="Script" path="res://Scenes/plant.gd" id="1_s0eac"]
[ext_resource type="Script" path="res://Scenes/DraggableComponent.gd" id="2_eymuw"]
[ext_resource type="Script" path="res://Scenes/PlantUIController.gd" id="4_ho8xi"]
[ext_resource type="Theme" uid="uid://mtnbajxp1ltg" path="res://Resources/Button Normal.tres" id="5_0leeb"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pavdi"]
radius = 74.0
height = 386.0

[node name="Plant" type="Node2D" groups=["Persist"]]
z_index = 1
script = ExtResource("1_s0eac")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_ftkaf")

[node name="DraggableComponent" type="Area2D" parent="."]
script = ExtResource("2_eymuw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DraggableComponent"]
shape = SubResource("CapsuleShape2D_pavdi")

[node name="PlantUIController" type="Node2D" parent="."]
visible = false
script = ExtResource("4_ho8xi")
value = 5

[node name="Panel2" type="Panel" parent="PlantUIController"]
z_index = 2
custom_minimum_size = Vector2(200, 50)
offset_left = -100.0
offset_top = -244.0
offset_right = 100.0
offset_bottom = -194.0
theme = ExtResource("5_0leeb")

[node name="VBoxContainer" type="VBoxContainer" parent="PlantUIController/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5_0leeb")

[node name="Button" type="Button" parent="PlantUIController/Panel2/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Sell: "

[connection signal="input_event" from="DraggableComponent" to="DraggableComponent" method="_on_input_event"]
[connection signal="mouse_entered" from="DraggableComponent" to="DraggableComponent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="DraggableComponent" to="DraggableComponent" method="_on_mouse_exited"]
[connection signal="pressed" from="PlantUIController/Panel2/VBoxContainer/Button" to="PlantUIController" method="_on_button_pressed"]
